# stock-desk

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  alembic.ini  compose.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml  signpath.yml  windows-installed.yml
config/: desktop-network-privacy.json  nsis-toolchain-lock.json  release-tag-allowed-signers  tauri-updater-runtime.json  windows-vm-broker-public-key.pem
docs/: acceptance.md  accessibility.md  architecture.md  backtesting-semantics.md  backup-and-restore.md  ci.md  code-signing-policy.md  configuration.md  data-sources.md  disclaimer.md  download.md  formula-compatibility.md  model-providers.md  performance.md  privacy.md  troubleshooting.md  windows-installed-evidence.md
docs/design/: 2026-07-09-chinese-default-real-market-documentation.md  2026-07-17-desktop-interaction-test-responsibilities.md  2026-07-17-macos-full-product-local-test.md
docs/images/: manifest.yml
docs/releases/: v1.0.0-final-audit.md  v1.0.0.md  v1.1.0-alpha.1.md  v1.1.0-alpha.2.md  v1.1.0-beta.2.md  v1.1.0-beta.3.md  v1.1.0.md
migrations/: __init__.py  env.py
migrations/versions/: 0001_core_tables.py  0002_task_observability.py  0003_market_catalog.py  0004_instruments_and_pools.py  0005_formula_catalog.py  0006_execution_status.py  0007_backtest_runs.py  0008_analysis_runs.py  0009_analysis_model_configs.py  0010_parent_active_retry.py  0011_worker_heartbeat.py  0012_windows_market_payload.py  __init__.py
packaging/: NOTICE.txt  stock-desk-sidecar.spec  stock-desk.spec
packaging/nsis/: NOTICE.md  installer-hooks.nsh  installer.nsi
packaging/windows/: stock-desk.iss
schemas/: artifact-manifest-v2.schema.json  deployment-latency-ledger-v1.schema.json  deployment-latency-report-v1.schema.json  deployment-latency-sample-v1.schema.json  deployment-latency-seal-v1.schema.json  nsis-repack-kit-v1.schema.json  nsis-repack-receipt-v1.schema.json  packaged-backtest-evidence-v1.schema.json  packaged-backtest-host-observation-v1.schema.json  stable-release-readiness-v1.schema.json  trusted-updater-release-v1.schema.json  windows-hosted-automation-v1.schema.json  windows-installed-evidence-v1.schema.json  windows-installed-evidence-v2.schema.json  windows-installed-raw-evidence-v1.schema.json  windows-installed-raw-evidence-v2.schema.json  windows-packaged-backtest-promotion-v1.schema.json  windows-vm-lifecycle-receipt-v2.schema.json  windows-vm-snapshot-policy-v1.schema.json  windows-vm-snapshot-policy-v2.schema.json
scripts/: aggregate_ci_evidence.py  artifact_manifest.py  backup.py  build_installer.py  build_windows_desktop.py  capture_packaged_backtest_semantics.py  capture_windows_desktop_evidence.ps1  check_import_boundaries.py  check_public_tree.py  check_requirement_coverage.py  ci_impact.py  ci_test_inventory.py  clean_build_artifacts.py  compare_windows_payloads.py  deployment_latency.py  dev.py  e2e_dev.py  e2e_snapshot.py  generate_desktop_icons.py  icon_visual_evidence.py  macos_full_product_test.py  macos_product_journey.py  macos_sidecar.py  macos_tauri_smoke.py  macos_tauri_support.py  macos_visual_analyzer.swift  main_validation_proof.py  nsis_mismatch_diagnostics.py  nsis_repack_contract.py  nsis_repack_producer.py  prepare_windows_packaged_backtest_evidence.py  research_source_probe.py  restore.py  run_performance_baseline.py  secure_artifact_snapshot.py  seed_demo_data.py  signpath_contract.py  source_fingerprint.py  stable_release_readiness.py  trusted_updater_release.py  (+22 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos-test.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  macos-smoke.json
src-tauri/src/: app.rs  data_root.rs  diagnostics.rs  exit.rs  main.rs  proxy.rs  sidecar.rs  uninstall.rs  updater.rs  updater_journal.rs  updater_transport.rs  updater_windows.rs  windows_job.rs
src/stock_desk/: __init__.py  config.py  desktop.py  desktop_runtime.py  desktop_session.py  main.py  runtime_entrypoint.py  runtime_identity.py  sidecar.py  web.py  windows_acl.py
tests/: backtest_test_helpers.py  formula_worker_helpers.py
tests/acceptance/: clean_install_harness.py  failure_matrix_harness.py  requirements.yml  test_analysis_flow.py  test_architecture_boundaries.py  test_backtest_scope_matrix.py  test_backtest_semantics.py  test_backup_restore.py  test_clean_install.py  test_container_smoke.py  test_desktop_backtest_transport_equivalence.py  test_failure_matrix.py  test_formula_consistency.py  test_formula_editing_assistance.py  test_formula_safety_boundary.py  test_formula_validation_boundary.py  test_full_user_journey.py  test_installed_distribution.py  test_macd_formula_flow.py  test_market_flow.py  test_market_period_adjustment_contract.py  test_non_goal_inventory.py  test_release_acceptance_scope.py  test_release_artifacts.py  test_release_docs.py  test_tauri_desktop_shell.py  test_tdx_local_user_flow.py  test_upgrade_path.py  test_v11_analysis_task_journey.py  test_v11_desktop_recovery.py  test_v11_onboarding.py  test_v1_backtest_oracle_equivalence.py  test_windows_bundle_verifier.py  test_windows_desktop_packaging.py  v1_1_requirements.yml
tests/integration/: test_desktop_core_workflows.py  test_sidecar_session.py  test_windows_runtime_acl.py  test_workspace_api.py
tests/performance/: baseline.json  ten_year_a_share.py  test_chart_query.py  test_formula_preview.py  test_single_backtest.py  test_ten_year_a_share_fixture.py  test_v1_budgets.py
tests/security/: test_analysis_boundaries.py  test_diagnostic_export.py  test_export_redaction.py  (+4 more)
web/: eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts
(+630 files in other folders)
