[project]
name = "stock-desk"
version = "0.5.0"
description = "Local-first foundation for a personal A-share research workspace"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "CongBao", email = "bao_cong@outlook.com" },
]
requires-python = ">=3.12,<3.13"
keywords = ["a-share", "fastapi", "react", "stock-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "alembic>=1.16,<2",
    "cryptography>=48.0.1,<49",
    "duckdb>=1.4.5,<1.5",
    "fastapi>=0.116,<1",
    "filelock>=3.19,<4",
    "httpx2>=2,<3",
    "lark>=1.2,<2",
    "numpy>=2.3,<3",
    "polars>=1.37,<2",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy>=2.0,<3",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
providers = [
    "tushare>=1.4.29,<2",
    "akshare>=1.18.64,<2",
    "baostock>=0.9.2,<1",
]

[project.urls]
Homepage = "https://github.com/CongBao/stock-desk"
Documentation = "https://github.com/CongBao/stock-desk/blob/main/docs/architecture.md"
Repository = "https://github.com/CongBao/stock-desk"
Issues = "https://github.com/CongBao/stock-desk/issues"
Security = "https://github.com/CongBao/stock-desk/security/advisories/new"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/alembic.ini",
    "/migrations",
    "/src/stock_desk",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stock_desk"]

[tool.hatch.build.targets.wheel.force-include]
"alembic.ini" = "stock_desk/alembic.ini"
"migrations" = "stock_desk/migrations"

[dependency-groups]
dev = [
    "bandit>=1.8,<2",
    "hatchling>=1.27,<2",
    "hypothesis>=6.140,<7",
    "markdown-it-py[linkify]>=4.2,<5",
    "mypy>=1.17,<2",
    "pillow>=12.1,<13",
    "pyyaml>=6.0,<7",
    "pytest>=8.4,<9",
    "pytest-benchmark>=5.2,<6",
    "pytest-cov>=6,<8",
    "requests>=2.32,<3",
    "ruff>=0.12,<1",
    "urllib3>=2.5,<3",
    "pyinstaller>=6.21,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["error"]
markers = [
    "container: opt-in tests for an already-running Docker Compose stack",
]

[tool.coverage.run]
branch = true
source = ["src/stock_desk", "scripts", "migrations"]
omit = ["scripts/e2e_dev.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.bandit]
exclude_dirs = ["tests"]
